--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,10 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Blaka&family=Fredoka+One&display=swap');
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -13,15 +12,15 @@
   }
 }
 
+.App {
+  background: url("/public/images/background.png");
+  background-size:  100% 100%;
+}
+
 .App-header {
-  background-color: #282c34;
+  background-color: rgba(0, 0, 0, 0.473);
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding-top: 1rem;
 }
 
 .App-link {
@@ -34,5 +33,24 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+.button-avatar:hover {
+  animation: buttonAvatarAnimation infinite 1s linear;
+}
+
+@keyframes buttonAvatarAnimation {
+  0% {
+    transform: rotate(0deg);
+  }
+  35% {
+    transform: rotate(-45deg);
+  }
+  75% {
+    transform: rotate(45deg);
+  }
+  100% {
+    transform: rotate(0deg);
   }
 }
